--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
