--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -4,3 +4,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		appearance: none;
+		margin: 0;
+}
+
+input[type=number] {
+		-moz-appearance: textfield;
+		-webkit-appearance: none;
+		appearance: none;
+}
