--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -5,15 +5,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Chrome & Safari */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-		-webkit-appearance: none;
-		appearance: none;
-		margin: 0;
+		display: none;
 }
 
+/* Firefox */
 input[type=number] {
 		-moz-appearance: textfield;
-		-webkit-appearance: none;
-		appearance: none;
+		appearance: textfield;
 }
